--- a/UI/index.html
+++ b/UI/index.html
@@ -6,7 +6,7 @@
 		<script src="libs/jquery-ui.min.js" type="text/javascript"></script>
 		<link href="libs/jquery-ui.min.css" rel="stylesheet"></link>
 		
-		<img src ="../bank.png" alt="no image">
+		<img src ="../bank.PNG" alt="no image">
 		<script src="kore-bot-sdk-client.js"></script>
 		<script src="chatWindow.js" type="text/javascript"></script>
 		<link href="chatWindow.css" rel="stylesheet"></link>
