--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
 		<script src="libs/jquery-ui.min.js" type="text/javascript"></script>
 		<link href="libs/jquery-ui.min.css" rel="stylesheet"></link>
 		
-		<script src="kore-bot-sdk-client.js"></script>
+		<script src="../libs/lodash.min.js"></script>
+		<script src='../libs/anonymousassertion.js'></script>
+		<script src="../kore-bot-sdk-client.js"></script>
 		<script src="chatWindow.js" type="text/javascript"></script>
 		<link href="chatWindow.css" rel="stylesheet"></link>
 		<script type="text/javascript">
 		$(document).on("ready",function(){
 			function assertion(options, callback) {
-                   console.log('in function');
+
 				// Client has to fill the claims and call the callback.
 				$.ajax({
-					url: "https://devbots.kore.com/api/users/sts",
+					url: "https://pilot-bots.kore.com/api/users/sts",
 					type: 'post',
 					headers: {
-						Authorization: "bearer k1XzEzNvyl_Cr58I8UHIinPJVrQHEgAeJdkp1ZCE0XVW6VhS8Kdjmvj6iHPumnEW"
+						Authorization: "bearer xUAFb35APzx_Ydv8-sa464YzXdQi4SypTjNOjAVD07E1S1wCHf0ZARoAR3xzsk4x"
 					},
 					dataType: 'json',
 					success: function (data) {
@@ -26,18 +28,29 @@
 						callback(null, options);
 					}
 				})
-			}                           
+			}
 
 			var botOptions = {};
 			botOptions.logLevel = 'debug';
-			botOptions.koreAPIUrl = "https://devbots.kore.com/api/";
+			botOptions.koreAPIUrl = "https://pilot-bots.kore.com/api/";
 			botOptions.assertionFn = assertion;
-			botOptions.isLoggedIn = false; // false: triggers anonymus flow. set it to true for log-in flow.
-			botOptions.clientId   = "cs-b2dacba9-a18f-5f0d-aad6-288d829c333f";
-			botOptions.botInfo = {name:"OCBC Bank","_id":"st-533dc03a-5bfd-554b-96cd-9a57a546a941"}; // pass bot name and stream id
+			/*
+			 Below config:(To support the anonymous user in test environments only.)
+			 Case.1:Anonymous User
+			        a. set it to false if the client defined the assertion for Anonymous User.
+			        b. set it to true if the client have not defined the assertion for Anonymous User.
+			 Case.2:Logged-In User
+			        a. set it to false if the client defined the assertion.
+			*/
+			botOptions.test = false;
+			botOptions.koreAnonymousFn = koreAnonymousFn;
+			botOptions.clientId   = "cs-894a4e1a-0cf4-595c-8b0d-d82767ce537d"; // secure client-id
+
+			botOptions.botInfo = {name:"Shopping Assistant","_id":"st-152a9791-55f0-5b73-907d-1b4b3cdca08b"}; // bot name is case sensitive
 			
 			var chatConfig={
-				botOptions:botOptions
+				botOptions:botOptions,
+				allowIframe: true
 			};
 
 			koreBotChat().show(chatConfig);
@@ -47,6 +60,9 @@
 		});
 		</script>
 	</head>
-	<body background="bank.png">
+	<body>
+		<div id="chatContainer">
+		<button class="openChatWindow">Open Chat Window</button>
+		</div>
 	</body>
 </html>
